# mess-sniffer-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile.dev  README.md  ROADMAP.md  SECURITY.md  action.yml  report-dashboard.html  rule-pack-schema.json  schema.json
.cargo/: config.toml
.claude/rules/: cli-crate.md  core-crate.md  detection.md  extract-crate.md  mcp-server.md  plugins.md  vscode-extension.md
.github/workflows/: release.yml
action/jq/: annotations-check.jq  filter-changed.jq  summary-audit.jq  summary-check.jq  summary-combined.jq  summary-security.jq
action/scripts/: analyze.sh  install.sh  summary.sh
action/tests/: run.sh
benchmarks/: bench-ci.sh  bench-dupes.mjs  package-lock.json  package.json
ci/: gitlab-ci.yml
ci/jq/: summary-audit.jq  summary-check.jq  summary-combined.jq
ci/tests/: run.sh
crates/cli/: Cargo.toml
crates/mcp/: Cargo.toml
crates/mcp/src/server/: mod.rs
crates/mcp/src/server/tests/: manifest_sync.rs  mod.rs  params.rs  run.rs  server_info.rs
crates/mcp/src/tools/: mod.rs
crates/napi/: package.json
docs/: backwards-compatibility.md  output-schema.json  security-agent-verification.md
editors/vscode/: .fallowrc.json  README.md  package.json
examples/languages/: README.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/fallow/: README.md  package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
scripts/: agent-files.sha256  generate-agent-docs.mjs  generate-agent-docs.test.mjs  public-config-corpus.py
(+460 files in other folders)
