[package]
name = "fallow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for fallow codebase intelligence (exposes fallow as typed tools to AI agents)"
readme = "../../README.md"

[[bin]]
name = "fallow-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.7", features = ["transport-io"] }
rquickjs = "0.12"
tokio.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
schemars.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# Test-only: drift tests assert the shared MCP tool manifest in fallow-types
# stays in sync with the live rmcp tool router. The shipped binary remains
# free of fallow-* workspace dependencies.
fallow-types.workspace = true
regex.workspace = true

[lints]
workspace = true
